# Fedstr

./: .gitignore  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.storage  LICENSE  README.md  build.rs  derive_npubs.sh  docker-compose.yml  file_server.py  setup.sh  setup_customer.sh  setup_deploy_all.sh  setup_dvm.sh
algorithms/diloco/: aggregate.py  config.yaml  model.py  prepare_data.py  train.py
algorithms/fedavg/: aggregate.py  config.yaml  train.py
python/: __init__.py  requirements.txt  train_tiny.py
src/: lib.rs  storage.rs
src/ml/: aggregation.rs  mod.rs  training.rs  validation.rs
src/protocol/: job_feedback.rs  job_request.rs  job_result.rs  mod.rs  payments.rs
