[package]
name = "fedstr-poc"
version = "0.1.0"
edition = "2021"
authors = ["Konstantinos Nikolakakis <admin@knikolakakis.com>"]
license = "MIT"
description = "Decentralized federated learning on NOSTR protocol"

[dependencies]
# Async & Runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Nostr
nostr = "0.34"
nostr-sdk = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
color-eyre = "0.6"
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = "0.4"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Python Integration
pyo3 = { version = "0.19", features = ["auto-initialize"] }

# Cryptography
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# HTTP client for file uploads
reqwest = { version = "0.11", features = ["multipart", "json"] }

[build-dependencies]
pyo3-build-config = "0.19"

# Phase 2 Binaries
[[bin]]
name = "dvm"
path = "src/bin/dvm.rs"

[[bin]]
name = "customer"
path = "src/bin/customer.rs"

[dev-dependencies]
tokio-test = "0.4"
